--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,39 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- TODO CHANGE THIS BACK TO SPLASH SCREEN WHEN WE'RE DONE DEVELOPING THIS ACTIVITY -->
         <activity
-            android:name=".GetHelpActivity"
-            android:label="@string/title_activity_splash_screen"
+            android:name=".SplashScreenActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LogMoodActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".FindPatternsActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".GetHelpActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".TrackProgressActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".PreferencesActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name">
         </activity>
     </application>
 
