a couple small debugs fixed missing quotes in insert statement for static Mood table, remembered to open/close for read when getting count of rows in cslog table in LogMoodActivity, added View/Update history activity to AndroidManifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".TrackProgressActivity"
             android:label="@string/app_name"></activity>
         <activity
+            android:name=".ViewUpdateHistoryActivity"
+            android:label="@string/app_name"></activity>
+        <activity
             android:name=".PreferencesActivity"
             android:label="@string/app_name"></activity>
         <activity
