--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,29 +14,65 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".SplashScreenActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".LogMoodActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".FindPatternsActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".GetHelpActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".TrackProgressActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".ViewUpdateHistoryActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".PreferencesActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:parentActivityName="galvanique.client.SplashScreenActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="galvanique.client.SplashScreenActivity" />
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
