added exporting gsr data. also changed the name of preferences to gsr because there's nothing else in there right now but we can change it back if that turns out to be a problem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
                 android:value="galvanique.client.SplashScreenActivity" />
         </activity>
         <activity
-            android:name=".PreferencesActivity"
+            android:name=".GsrActivity"
             android:label="@string/app_name"
             android:parentActivityName="galvanique.client.SplashScreenActivity">
             <!-- Parent activity meta-data to support 4.0 and lower -->
